--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "crypt-js": "^1.0.4",
+    "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
